# crypt-ai-service

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
checkpoints/lstm/BTC/1h/: best.pt  last.pt
checkpoints/transformer/: best.pt  last.pt
checkpoints/transformer/AVAX/: best.pt  last.pt
checkpoints/transformer/AVAX/1d/: best.pt  last.pt
checkpoints/transformer/AVAX/1h/: best.pt  last.pt
checkpoints/transformer/AVAX/4h/: best.pt  (+1 more)
checkpoints/transformer/BTC/: best.pt  last.pt
docs/: ARCHITECTURE.md  MODELS.md
runs/run_20251202_084103/: events.out.tfevents.1764632463.Userui-MacBookPro.local.54216.0
runs/run_20251202_084121/: events.out.tfevents.1764632481.Userui-MacBookPro.local.54342.0
runs/run_20251202_084121/Accuracy_train/: events.out.tfevents.1764632485.Userui-MacBookPro.local.54342.3
runs/run_20251202_084121/Accuracy_val/: events.out.tfevents.1764632485.Userui-MacBookPro.local.54342.4
runs/run_20251202_084121/Loss_train/: events.out.tfevents.1764632485.Userui-MacBookPro.local.54342.1
runs/run_20251202_084121/Loss_val/: events.out.tfevents.1764632485.Userui-MacBookPro.local.54342.2
runs/transformer/run_20251202_084805/: events.out.tfevents.1764632885.Userui-MacBookPro.local.55274.0
runs/transformer/run_20251202_090518/: events.out.tfevents.1764633918.Userui-MacBookPro.local.57693.0
scripts/: train.py  train_transformer.py
src/crypto_ai/: __init__.py  analyzer.py  api.py  cli.py  client.py  data_sources.py  insight.py  llm_insight.py  models.py  preprocessing.py  transformer.py
tests/: test_analyzer.py  test_client.py
(+319 files in other folders)
